# staze

./: .gitignore  Cargo.toml  README.md
ascii/staz/idle/: frame1.txt  frame2.txt  frame3.txt  frame4.txt  frame5.txt
ascii/staz/sleeping/: frame0.txt  frame1.txt  frame3.txt
src/: db.rs  history.rs  main.rs  session.rs  stats.rs  tags.rs
wix/: main.wxs
