[package]
name = "staze"
version = "0.1.0"
edition = "2024"
authors = ["Simon Buré"]
license = "MIT"
description = "Staze: a TUI to manage your working sessions in your terminal."
repository = "https://github.com/SimonBure/staze"
homepage = "https://github.com/SimonBure/staze"
keywords = ["tui", "cli", "time-tracker", "productivity"]

[package.metadata.wix]
upgrade-guid = "C507BEAB-D1B8-48F5-B025-97F2658EFAC1"
path-guid = "5317DAD4-8B00-4B09-B439-B3A9C9BFF726"
license = false
eula = false

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
rusqlite = {version = "0.39.0", features = ["bundled"]}
chrono = "0.4"
toml   = "0.8"
dirs   = "5"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
